--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Risadas garantidas</title>
 </head>
 <body>
-    
+    <header>Risadas garantidas</header>
+    <h1>Videos engracados para não parar de rir</h1>
 </body>
 </html>
