--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <header>Risadas garantidas</header>
     <h1>Videos engracados para não parar de rir</h1>
+    <p>para toda familia aqui voce vai assistir videos engraçados espalhados pelo mundo todo  </p>
 </body>
 </html>
