--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <header>Risadas garantidas</header>
+
+    <section class="primeirovideo">
     <h1>Videos engracados para não parar de rir</h1>
     <p>para toda familia aqui voce vai assistir videos engraçados espalhados pelo mundo todo  </p>
+https://youtu.be/JfWESF3cSPc?si=mwlojhQ0-Wgu0BUs
+    </section>
 </body>
 </html>
