--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
     <header>Risadas garantidas</header>
 
     <section class="primeirovideo">
+    <div class="chamada-texto">
     <h1>Videos engracados para não parar de rir</h1>
     <p>para toda familia aqui voce vai assistir videos engraçados espalhados pelo mundo todo  </p>
-https://youtu.be/JfWESF3cSPc?si=mwlojhQ0-Wgu0BUs
+       </div>
+    
+    </div>
+<iframe width="560" height="316" src="https://www.youtube.com/watch?v=LAAn3_8lLDg" title="youtube video player"frameborder="0" allow="accelermeter; autoplay; clipboard-write; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+
     </section>
-</body>
-</html>
+
+    <section class="categoria">
+      <h2>outrosvideos sobre risadas ingraçadas</h2>
+    </div class="categoria videos">
+
+    <a href="https://www.youtube.com/watch?v=Uv2WysempTE">
+        <img src="https://www.youtube.com/vi/watch?v=Wc7ePAr4hVQ"
