--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
 <iframe width="560" height="316" src="https://www.youtube.com/watch?v=LAAn3_8lLDg" title="youtube video player"frameborder="0" allow="accelermeter; autoplay; clipboard-write; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 
-    </section>
+ </section>
 
     <section class="categoria">
       <h2>outrosvideos sobre risadas ingraçadas</h2>
-    </div class="categoria videos">
+ </div class="categoria videos">
 
-    <a href="https://www.youtube.com/watch?v=Uv2WysempTE">
-        <img src="https://www.youtube.com/vi/watch?v=Wc7ePAr4hVQ"
+ <a href="https://www.youtube.comwatch?v=54nm647c374">
+<img src="https://img.youtube.com/vi/54nm647c374/maxresdefault.jpg">
+ </a>
+
+ <a href="https://www.youtube.com/warth?v=PYYav1HOVco">
